--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "express": "^4.17.1",
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,7 +16,7 @@
     "yarn": "^1.22.11"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "nodemon server.js",
     "build": "react-scripts build",
     "buildrun": "serve -s build",
     "eject": "react-scripts eject"
